--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -31,10 +30,10 @@ jobs:
     - run: npm test
 
     # AWS S3 
-    - uses: actions/checkout@master
-    - uses: awact/s3-action@master
+    - name: Upload to S3
+      uses: awact/s3-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete
+        args: --acl public-read --follow-symlinks --delete ${SOURCE_DIR}
       env:
         SOURCE_DIR: './build'
         AWS_REGION: 'ap-northeast-2'
