--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Upload to S3
       uses: awact/s3-action@master
       with:
-        args: --acl public-read --follow-symlinks --delete ${SOURCE_DIR}
+        args: --acl public-read --follow-symlinks --delete
       env:
         SOURCE_DIR: './build'
         AWS_REGION: 'ap-northeast-2'
